[workspace]

resolver = "2"

members = [
  "race-core/src/main/rust/odin_common",  
  "race-core/src/main/rust/odin_config",  
  "race-core/src/main/rust/odin_job",
  "race-core/src/main/rust/odin_actor",
  "race-core/src/main/rust/odin_macro",
  "race-core/src/main/rust/odin_gdal",
  "race-earth/src/main/rust/odin_dem",
  "race-earth/src/main/rust/odin_hrrr",
  "race-earth/src/main/rust/odin_windninja",

  "race-earth/src/main/rust/gpshub",

  "race-tools/src/main/rust/opendata_splitter",
  "race-tools/src/main/rust/mkslides",
  "race-tools/src/main/rust/servedoc",

  "race-tools/src/main/rust/webrun"
]

[workspace.dependencies]

odin_common = { version = "*", path = "race-core/src/main/rust/odin_common" }
odin_config = { version = "*", path = "race-core/src/main/rust/odin_config" }
odin_macro  = { version = "*", path = "race-core/src/main/rust/odin_macro" }
odin_gdal   = { version = "*", path = "race-core/src/main/rust/odin_gdal" }
odin_job    = { version = "*", path = "race-core/src/main/rust/odin_job" }
