cargo-features = ["edition2024"]

[package]
name = "odin_actor"
version = "0.3.0"
edition = "2024"

[build]
rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=native"]


[dependencies]
tokio = { version = "*", features = ["full", "tracing"], optional = true }
kanal = { version = "0.1.0-pre8", features = ["async"], optional = true }

thiserror = "*"
anyhow = "*"
ron = "*"
serde = { version = "*", features = ["derive"] }
parse_duration = "*"
colored = "*"

odin_macro = { workspace = true }
odin_config = { workspace = true }
odin_job = { workspace = true }

[features]
default = ["tokio_kanal"]
tokio_channel = ["dep:tokio"]
tokio_kanal = ["dep:tokio", "dep:kanal"]



