[package]
name = "odin_config"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen-key"
path = "src/bin/gen-key.rs"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
ron = "*"
serde = { version = "*", features = ["derive"] }
parse_duration = "*"
thiserror = "*"
directories = "*"
rpassword = { version = "*" }
tokio = { version = "*", features = ["full"] }
lazy_static = "*"
secstr = { version = "*" }

miniz_oxide = { version = "*", optional = true }
magic-crypt = { version = "*", optional = true }
pgp = { version = "*", optional = true }

# gen-key dependencies
smallvec = "*"
rand = "*"
structopt = "*"
anyhow = "*"

odin_common = { workspace = true }

[build-dependencies]
miniz_oxide = "*"
rand = "*"
pgp = "*"
magic-crypt = "*"

[features]
config_embedded = ["dep:miniz_oxide"]
config_embedded_pgp = ["dep:pgp"]
config_embedded_pw = ["dep:magic-crypt"]
config_xdg = []
config_local = []
