[package]
name = "odin_gdal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simplewarp"
path = "src/bin/simplewarp.rs"

[[bin]]
name = "utm_bbox"
path = "src/bin/utm_bbox.rs"

[dependencies]
odin_common = { path = "../odin_common" }

gdal-sys = { version = "0.9.0", features = ["bindgen"] }
gdal = { version = "0.16.0" }
lazy_static = "1.4.0"
libc = "0.2.147"
geo = "0.26.0"
anyhow = "1.0.75"
thiserror = "1"
structopt = "0.3.26"

[build-dependencies]
cc = "1.0"
