[package]
name = "gethrrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.4"
structopt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tempfile = "3"
serde = "1.0.167"
serde_derive = "1.0.167"
ron = "0.8.0"

# our ODIN crates
odin_common = { path = "../odin_common" }