[package]
name = "odin_dem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "odin_dem"
path = "src/bin/odin_dem.rs"


[dependencies]

# our ODIN crates
odin_common = { path = "../odin_common" }
odin_gdal = { path = "../odin_gdal" }

lazy_static = "1.4.0"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.6"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
