[package]
name = "wnrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json","blocking"] }
bytes = "1.4"
structopt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "1.0"