[package]
name = "gpshub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1"
structopt = "0.3"
socket2 = { version = "0.4.4", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"