[package]
name = "mkslides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odin_common = { workspace = true }

lazy_static = "*"
markdown = "1.0.0-alpha.14"
structopt = "*"
anyhow = "*"
regex = "*"

