[package]
name = "opendata_splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# our ODIN crates
odin_common = { path = "../odin_common" }

chrono = { version = "0.4.26", features = ["serde"] }
geojson = "0.24.1"
lazy_static = "1.4.0"
serde_json = "1.0.103"
structopt = "0.3.26"
serde = "1.0.183"
uom = { version = "0.35.0", features = ["serde", "i64"] }
indexmap = { version = "2.0.0", features = ["serde"] }
