[package]
name = "responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"
bytes = "1.4.0"
structopt = "0.3.26"
thiserror = "1.0.40"