[package]
name = "servedoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.7.1", features = ["full"] }
warp = "0.3.1"
structopt = "0.3"
