[package]
name = "webrun"
version = "0.1.0"
authors = ["Peter Mehlitz <pcmehlitz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
warp = "*"
bytes = "*"
structopt = "*"
